--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.0
 MarkupSafe==2.0.0rc2
 Werkzeug==2.0.0
+marshmallow==3.19.0
+
 
 # Flask Packages
 Flask-Login==0.4.0
@@ -17,6 +19,8 @@ Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 Flask-User==1.0.1.5
 Flask-Cors==3.0.10
+Flask-JWT-Extended==4.5.2
+
 
 # Automated tests
 pytest==3.0.5
